[tool.poetry]
name = "sebaubuntu_libs"
version = "1.4.4"
description = "SebaUbuntu's shared libs"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/sebaubuntu_libs"

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.27"
requests = "^2.28.1"
pyelftools = ">=0.29,<0.32"
sphinx = { version = ">=5.0.1,<8.0.0", optional = true }
sphinx-rtd-theme = { version = ">=1,<3", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
