[tool.poetry]
name = "sebaubuntu_libs"
version = "1.6.1"
description = "SebaUbuntu's shared libs"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/sebaubuntu_libs"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
requests = "^2.32.5"
pyelftools = ">=0.29,<0.33"
sphinx = { version = ">=5.0.1,<8.0.0", optional = true }
sphinx-rtd-theme = { version = ">=1,<4", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
